<resources>
    <string name="app_name">BContacts</string>
    <string name="contact_name">Name</string>
    <string name="contact_number">9461088546</string>
    <string name="button_call">Button for calling</string>
    <string name="button_message">button for messaging</string>
    <string name="edit">Edit</string>
    <string name="add_to_bcontact">Add to BContact</string>
    <string name="remove_from_bcontact">Remove from BContact</string>
    <string name="notes">Notes</string>
    <string name="future_messages">Future Messages</string>
    <string name="floating_button_to_add_note">floating button to add note</string>
    <string name="this_is_a_message">"this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message this is a message "</string>
    <string name="on">On: </string>
    <string name="message_time">08:12 PM 13 April,2021</string>
    <string name="save">Save</string>
    <string name="message">Message</string>
    <string name="floating_button_to_add_message">floating button to add message</string>
</resources>